@@ -5,6 +5,7 @@ rKID  - relate current parent to existing kid
 rspou - relate current person to existing spouse
 rparent - relate current kid  to existing parent
 look[x] iID - examine another ID
+put DELETE back.
 
    2
    
